네트워크-네트워크와네트워크모델

--- a/네트워크/1,-2장-네트워크와-모델.md
+++ b/네트워크/1,-2장-네트워크와-모델.md
@@ -94,7 +94,7 @@
 - 계층별로 다른 패킷의 이름을 `PDO` (`Protocol Data Unit`)이라고 한다.
 - 프레임 (2계층) - 패킷(3계층) - 세그먼트(4계층)
 
-| 캡슐화                                             | 디캡슐화                                             | PDO                                             |
-| -------------------------------------------------- | ---------------------------------------------------- | ----------------------------------------------- |
-| <img style="max-width50%;" src="image/캡슐화.png"> | <img style="max-width50%;" src="image/디캡슐화.png"> | <img style="max-width50%;" src="image/PDO.png"> |
+| 캡슐화                                               | 디캡슐화                                               | PDO                                               |
+| ---------------------------------------------------- | ------------------------------------------------------ | ------------------------------------------------- |
+| <img style="max-width50%;" src="./image/캡슐화.png"> | <img style="max-width50%;" src="./image/디캡슐화.png"> | <img style="max-width50%;" src="./image/PDO.PNG"> |
 
