네트워크-3장-데이터링크계층과-이더넷

--- a/네트워크/1,-2장-네트워크와-모델.md
+++ b/네트워크/1,-2장-네트워크와-모델.md
@@ -20,12 +20,18 @@
 
 ### 네트워크 연결 형태에 따른 분류
 
-| Start형                                                      | Mesh형                                                       | 혼합형                                                       |
-| ------------------------------------------------------------ | ------------------------------------------------------------ | ------------------------------------------------------------ |
-| <img style="max-width50%;" src="image/image-20210708214425952.png"> | <img style="max-width:50%;" src="image/image-20210708214831004.png"> | <img style="max-width:50%;" src="image/image-20210708215136370.png"> |
-| 중앙 장비에 모든 노드가 연결됨<br />중앙 스위치가 고장나면 전부 다 고장됨<br />ex) 공유기, 주로 하나의 LAN 대역을 만들 때 사용 | 여러 노드들이 서로 그물처럼 연결됨<br />                     | 실제 인터넷은 여러 형태를 혼합한 형태다.                     |
-
-
+- 스타형 : 중앙에 있는 네트워크 장비를 통해 모두 연결된 형태,
+  - 특징
+    중앙의 장비가 고장나면 모든 시스템들이 통신 불가
+    일반적으로 스위치 장비를 통해 2계층, LAN 대역을 구성
+- 망형 : 모든 시스템들이 각각 개별적으로 연결됨, 비용이 많이 든다.
+  - 특징
+    특정 장비가 고장나도 다른 장비끼리 통신하는데 문제 없음
+    일반적으로 라우터 장비를 통해 3계층, WAN 대역을 구성
+- 버스형 : 하나의 선을 통해 여러 시스템을 연결
+- 트리형 : 시스템을 여러 계층으로 나눠서 연결
+- 링형 : 인접 시스템을 1:1로 연결
+- 혼합형 : 여러 형태를 조합하여 구성한 형태
 
 ## 3. 네트워크 통신 방식
 
@@ -75,8 +81,11 @@
 
 - 누가 누구에게, 어떻게, 어떤 데이터를 보내고, 무엇을 요청하고 어떤 데이터로 응답하는지 등을 나타낸다.
 
-- 패킷은제어정보인 `헤더`와 사용자 데이터인 `페이로드`로 구성되어 있다.
+- 패킷은 제어정보인 `헤더`와 사용자 데이터인 `페이로드`로 구성되어 있다.
 
+  - `페이로드` : 프로토콜 상위계층에서 내려온 데이터
+  - `풋터`: 추가적 정보 데이터
+  
   
 
 ### 캡슐화
@@ -87,14 +96,14 @@
 ### 디캡슐화
 
 - 패킷을 받았을 때, 프로토콜을 하나씩 확인하며 데이터를 확인하는 과정이 `디캡슐화`다.
-- 하위 프로오콜부터 안의 양식대로, 어디서 어떤 데이터를 어떻게 보냈는지 확인한다.
+- 하위 프로토콜부터 어디서 어떤 데이터를 어떻게 보냈는지 확인한다.
 
 ### `PDO`
 
 - 계층별로 다른 패킷의 이름을 `PDO` (`Protocol Data Unit`)이라고 한다.
 - 프레임 (2계층) - 패킷(3계층) - 세그먼트(4계층)
 
-| 캡슐화                                               | 디캡슐화                                               | PDO                                               |
-| ---------------------------------------------------- | ------------------------------------------------------ | ------------------------------------------------- |
-| <img style="max-width50%;" src="./image/캡슐화.png"> | <img style="max-width50%;" src="./image/디캡슐화.png"> | <img style="max-width50%;" src="./image/PDO.PNG"> |
+| 캡슐화                                                 | 디캡슐화                                                 | PDO                              |
+| ------------------------------------------------------ | -------------------------------------------------------- | -------------------------------- |
+| <img style="max-width50%;" src="./image/1-캡슐화.png"> | <img style="max-width50%;" src="./image/1-디캡슐화.png"> | ![1-PDO.PNG"](./image/1-PDO.PNG) |
 
